Refine character count restriction.

--- a/epcurate-curation.html
+++ b/epcurate-curation.html
@@ -1238,7 +1238,7 @@
 <script id="poi-poll-button-tmpl-item" type="text/x-jquery-tmpl">
     <p class="text poll">
         <span>
-            <input type="text" name="${btnName}" maxlength="8" placeholder="${nn._([cms.global.PAGE_ID, 'poi-event', 'Input button text'])}" class="text poll-button" />
+            <input type="text" name="${btnName}" placeholder="${nn._([cms.global.PAGE_ID, 'poi-event', 'Input button text'])}" class="text poll-button" />
         </span>
         <a href="#" class="poll-button-del"></a>
     </p>
