Change default poll event button text to 'Button text'.

--- a/epcurate-curation.html
+++ b/epcurate-curation.html
@@ -852,7 +852,7 @@
                     {{each pollButtons}}
                     <p class="text poll">
                         <span>
-                            <input type="text" name="btnText1" value="${$value}" placeholder="${nn._([cms.global.PAGE_ID, 'poi-event', 'Input button text'])}" class="text poll-button" />
+                            <input type="text" name="btnText1" value="${$value}" placeholder="${nn._([cms.global.PAGE_ID, 'poi-event', 'Button text'])}" class="text poll-button" />
                         </span>
                         <a href="#" class="poll-button-del"></a>
                     </p>
@@ -1238,7 +1238,7 @@
 <script id="poi-poll-button-tmpl-item" type="text/x-jquery-tmpl">
     <p class="text poll">
         <span>
-            <input type="text" name="${btnName}" placeholder="${nn._([cms.global.PAGE_ID, 'poi-event', 'Input button text'])}" class="text poll-button" />
+            <input type="text" name="${btnName}" placeholder="${nn._([cms.global.PAGE_ID, 'poi-event', 'Button text'])}" class="text poll-button" />
         </span>
         <a href="#" class="poll-button-del"></a>
     </p>
