--- a/epcurate-curation.html
+++ b/epcurate-curation.html
@@ -5,7 +5,7 @@
 <meta http-equiv="cache-control" content="no-cache" />
 <meta http-equiv="pragma" content="no-cache" />
 <meta http-equiv="expires" content="0" />
-<link rel="stylesheet" href="http://9x9ui.s3.amazonaws.com/poi/jquery.poi.css?v=1278" />
+<link rel="stylesheet" href="stylesheetsv3/jquery.poi.css?v=1278" />
 <link rel="stylesheet" href="stylesheetsv3/style.css?v=1278" />
 <link rel="stylesheet" href="stylesheetsv3/lightbox.css?v=1278" />
 <link rel="stylesheet" href="stylesheets/uniform.css?v=1278" />
