--- a/epcurate-curation.html
+++ b/epcurate-curation.html
@@ -5,7 +5,7 @@
 <meta http-equiv="cache-control" content="no-cache" />
 <meta http-equiv="pragma" content="no-cache" />
 <meta http-equiv="expires" content="0" />
-<link rel="stylesheet" href="stylesheetsv3/jquery.poi.css?v=1278" />
+<link rel="stylesheet" href="http://9x9ui.s3.amazonaws.com/poi/jquery.poi.css?v=1278" />
 <link rel="stylesheet" href="stylesheetsv3/style.css?v=1278" />
 <link rel="stylesheet" href="stylesheetsv3/lightbox.css?v=1278" />
 <link rel="stylesheet" href="stylesheets/uniform.css?v=1278" />
@@ -16,8 +16,8 @@
 <link rel="stylesheet" href="stylesheetsv3/ep-curation.css?v=1278" />
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
-<!--<script src="http://9x9ui.s3.amazonaws.com/poi/jquery.poi.js?v=1278"></script>-->
-<script src="javascripts/libs/jquery.poi.js"></script>
+<script src="http://9x9ui.s3.amazonaws.com/poi/jquery.poi.js?v=1278"></script>
+<!-- <script src="javascripts/libs/jquery.poi.js"></script> -->
 <script src="javascripts/libs/nn-sdk.js?v=1278"></script>
 <script src="javascripts/libs/respond.min.js"></script>
 <script src="javascripts/libs/jquery.mousewheel.min.js?v=1278"></script>
