PCs 4.1 all function done

--- a/brand-setting.html
+++ b/brand-setting.html
@@ -58,7 +58,7 @@
         <div id="func-nav">
             <ul>
                 <li><a href="portal-manage.html" class="portal langkey">My Portal</a></li>
-                <li><a href="store-manage.html" class="store langkey">Program Store</a></li>
+                <li><a href="store-promotion.html" class="store langkey">Program Store</a></li>
                 <li class="active"><a href="brand-setting.html" class="brand langkey">Brand Settings</a></li>
             </ul>
         </div>
