--- a/portal-set.html
+++ b/portal-set.html
@@ -57,7 +57,7 @@
         <div id="func-nav">
             <ul>
                 <li class="active"><a href="#" class="portal">My Portal</a></li>
-                <li><a href="store-manage.html" class="store langkey">Channel Store</a></li>
+                <li><a href="store-promotion.html" class="store langkey">Program Store</a></li>
                 <li><a href="brand-setting.html" class="brand langkey">Brand Settings</a></li>
             </ul>
         </div>
