--- a/store-manage.html
+++ b/store-manage.html
@@ -60,10 +60,10 @@
             <ul>
                 <li><a href="portal-manage.html" class="portal langkey">My Portal</a></li>
                 <li>
-                    <a href="store-manage.html" class="store langkey">Program Store</a>
+                    <a href="store-promotion.html" class="store langkey">Program Store</a>
                     <ul class="sub-nav">
-                        <li><a href="store-promotion.html">Promotion Category</a></li>
-                        <li class="active"><a href="store-manage.html">System Category</a></li>
+                        <li><a href="store-promotion.html" class="langkey">Promotion Category</a></li>
+                        <li class="active"><a href="store-manage.html" class="langkey">System Category</a></li>
                     </ul>
                 </li>
                 <li><a href="brand-setting.html" class="brand langkey">Brand Settings</a></li>
@@ -76,14 +76,14 @@
         <div id="title-func" class="clearfix">
             <h2><span class="langkey">Program Store</span> &gt; <span class="categry-type langkey">System Category</span></h2>
             <ul>
-                <li id="set-save" class="last"><p class="btns disable"><span><a href="javascript:void(0)" class="langkey">Save</a></span></p></li>
+                <li id="set-save" class="last"><p class="btns disableBB"><span><a href="javascript:void(0)" class="langkey">Save</a></span></p></li>
             </ul>
         </div>
         <div class="intro clearfix">
             <p>
-                <span class="langkey">Promotion category provides the best program impression in program store.</span>
-                <a href="#" class="switch-on hide">ON</a>
-                <a href="#" class="switch-off hide">OFF</a>
+                <span class="langkey">There are over 1000 FREE programs for your selection, you can activate system categories to enrich your program store.</span>
+                <a href="#" class="switch-on langkey hide">ON</a>
+                <a href="#" class="switch-off langkey hide">OFF</a>
             </p>
             <p class="msg-error langkey">You have turnned off system category, your viewers will not see these categories and programs in store.</p>
         </div>
