--- a/portal-manage.html
+++ b/portal-manage.html
@@ -63,7 +63,7 @@
                     <ul class="sub-nav">
                     </ul>
                 </li>
-                <li><a href="store-manage.html" class="store langkey">Program Store</a></li>
+                <li><a href="store-promotion.html" class="store langkey">Program Store</a></li>
                 <li><a href="brand-setting.html" class="brand langkey">Brand Settings</a></li>
             </ul>
         </div>
@@ -336,7 +336,7 @@
                 </div>
             </div>
         </div>
-        <p class="ch-title">${updateDate}--{name}</p>
+        <p class="ch-title">${name}</p>
     </li>
 {{else}}
     <li gg="${updateDate}" id="set_${id}" class="itemList isSortable">
@@ -368,7 +368,7 @@
                 </div>
             </div>
         </div>
-        <p class="ch-title">${seq}--${updateDate}--${name}</p>
+        <p class="ch-title">${name}</p>
     </li>
 {{/if}}
 </script>
