new requirement , let PCS can manage us mso , before tw only
bug fix :
janet : 1. program list empty , don't show create program
ivan : 1. in PCS program with TAG with title attribute

--- a/store-manage.html
+++ b/store-manage.html
@@ -314,7 +314,7 @@
                 </div>
             </div>
         </div>
-        <p class="ch-title">${name}</p>
+        <p class="ch-title" title="${name}">${name}</p>
     </li>
 {{else}}
     <li id="channel_${id}" class="channelItem">
@@ -355,7 +355,7 @@
                 </div>
             </div>
         </div>
-        <p class="ch-title">${name}</p>
+        <p class="ch-title" title="${name}">${name}</p>
     </li>
 {{/if}}
 </script>
