--- a/store-promotion.html
+++ b/store-promotion.html
@@ -343,7 +343,7 @@
                 </div>
             </div>
         </div>
-        <p class="ch-title">${name}</p>
+        <p class="ch-title" title="${name}">${name}</p>
     </li>
 </script>
 <!-- store-chanels-li-tmpl End -->
