--- a/portal-manage.html
+++ b/portal-manage.html
@@ -336,7 +336,7 @@
                 </div>
             </div>
         </div>
-        <p class="ch-title">${name}</p>
+        <p class="ch-title" title="${name}">${name}</p>
     </li>
 {{else}}
     <li gg="${updateDate}" id="set_${id}" class="itemList isSortable">
@@ -368,7 +368,7 @@
                 </div>
             </div>
         </div>
-        <p class="ch-title">${name}</p>
+        <p class="ch-title" title="${name}">${name}</p>
     </li>
 {{/if}}
 </script>
