1. cross domain fix for fb login and preview video
2. fix bug: channel set manage and promotion category  search program to add with mso name

--- a/portal-manage.html
+++ b/portal-manage.html
@@ -299,7 +299,7 @@
 <li id="sch_${id}">
     <div class="thumb">
         <div id="schk_${id}" class="checkbox{{if alreadyAdd === true}} hide{{/if}}"></div>
-        <a href="/view?mso=${msoName}&ch=${id}" target="_blank">
+        <a href="${cms.config.API_BASE}/view?mso=${msoName}&ch=${id}" target="_blank">
             <img src="images/icon_playlist.png" alt="" class="watermark" />
         </a>
         <div class="ch">
@@ -381,7 +381,7 @@ ${nn._([cms.global.PAGE_ID, 'channel-list', 'Sorted by'])} :
                 </div>
                 <div class="tip-top"></div>
             </div>
-            <a href="/view?mso=${msoName}&ch=${id}" target="_blank">
+            <a href="${cms.config.API_BASE}/view?mso=${msoName}&ch=${id}" target="_blank">
                 <img class="watermark" alt="" src="images/icon_playlist.png" />
             </a>
             <div class="ch">
@@ -413,7 +413,7 @@ ${nn._([cms.global.PAGE_ID, 'channel-list', 'Sorted by'])} :
                 </div>
                 <div class="tip-top"></div>
             </div>
-            <a href="/view?mso=${msoName}&ch=${id}" target="_blank">
+            <a href="${cms.config.API_BASE}/view?mso=${msoName}&ch=${id}" target="_blank">
                 <img class="watermark" alt="" src="images/icon_playlist.png" />
             </a>
             <div class="ch">
