--- a/store-promotion.html
+++ b/store-promotion.html
@@ -229,7 +229,7 @@
 <li id="sch_${id}">
     <div class="thumb">
         <div id="schk_${id}" class="checkbox{{if alreadyAdd === true}} hide{{/if}}"></div>
-        <a href="/view?mso=${msoName}&ch=${id}" target="_blank">
+        <a href="${cms.config.API_BASE}/view?mso=${msoName}&ch=${id}" target="_blank">
             <img src="images/icon_playlist.png" alt="" class="watermark" />
         </a>
         <div class="ch">
@@ -334,7 +334,7 @@
                 </div>
                 <div class="tip-top"></div>
             </div>
-            <a href="/view?mso=${msoName}&ch=${id}" target="_blank">
+            <a href="${cms.config.API_BASE}/view?mso=${msoName}&ch=${id}" target="_blank">
                 <img class="watermark" alt="" src="images/icon_playlist.png" />
             </a>
             <div class="ch">
