--- a/index.html
+++ b/index.html
@@ -303,14 +303,14 @@
     <div class="wrap">
         <div class="photo-list">
             <div class="ep">
-                <a href="/view?ch=${id}" target="_blank"><img src="${moreImageUrl_2}" alt="" /></a>
+                <a href="${cms.config.API_BASE}/view?ch=${id}&dddd" target="_blank"><img src="${moreImageUrl_2}" alt="" /></a>
             </div>
             <div class="ch">
                 <div class="img">
-                    <a href="/view?ch=${id}" target="_blank"><img src="${moreImageUrl_1}" alt="" /></a>
+                    <a href="${cms.config.API_BASE}/view?ch=${id}" target="_blank"><img src="${moreImageUrl_1}" alt="" /></a>
                 </div>
             </div>
-            <a href="/view?ch=${id}" target="_blank"><img src="images/icon_playlist.png" alt="" class="watermark" /></a>
+            <a href="${cms.config.API_BASE}/view?ch=${id}" target="_blank"><img src="images/icon_playlist.png" alt="" class="watermark" /></a>
         </div>
         <div class="info">
             <h3><a href="episode-list.html?id=${id}">${name}</a></h3>
