1. fix bug (channel set add problem / promotion category add program bug) 2. modify message 3. clear unuse code

--- a/portal-manage.html
+++ b/portal-manage.html
@@ -76,7 +76,7 @@
         </div>
         <div class="intro clearfix">
             <p>
-                <span class="langkey">Promotion category provides the best program impression in program store.</span>
+                <span class="langkey">Main channels are the first thing sighted by your audience, which offer the great opportunity for your fine programs to gain visibility and exposure.</span>
                 <a href="#" class="switch-on hide">ON</a>
                 <a href="#" class="switch-off hide">OFF</a>
             </p>
@@ -167,6 +167,20 @@
         <div class="overlay-wrap">
             <a href="#" class="btn-close">Close</a>
             <p class="content">You are not authorized to edit this episode.</p>
+            <div class="overlay-btn">
+                <p class="btns btn-ok"><span><a href="#">OK</a></span></p>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- System Error Layer End -->
+
+<!-- System Error Layer Begin -->
+<div id="message-prompt" class="lightbox-content overlay-l">
+    <div class="overlay-container">
+        <div class="overlay-wrap">
+            <a href="#" class="btn-close">Close</a>
+            <p class="content"></p>
             <div class="overlay-btn">
                 <p class="btns btn-ok"><span><a href="#">OK</a></span></p>
             </div>
