--- a/portal-manage.html
+++ b/portal-manage.html
@@ -11,7 +11,7 @@
 <link rel="stylesheet" href="stylesheets/uniform.css?v=1278" />
 <link rel="stylesheet" href="stylesheets/episode.css?v=1278" />
 <link rel="stylesheet" href="stylesheets/portal.css?v=1278" />
-<title>9x9.tv - My Portal</title>
+<title>9x9.tv - Main Channels</title>
 </head>
 <body>
 <div id="fb-root"></div>
@@ -39,7 +39,7 @@
         <h3><a href="index.html"><span class="cms-icon">CMS</span><span class="sub-title">Content Management System</span></a></h3>
         <ul>
             <li><span><a href="index.html">My Programs</a></span></li>
-            <li class="on"><span><a href="portal-manage.html">My Portal</a></span></li>
+            <li class="on"><span><a href="portal-manage.html">My App</a></span></li>
         </ul>
         <div class="studio-setup">
             <p class="btn-left"><span class="btn-right"><span class="btn-middle"><a href="cms-settings.html"><img src="images/icon_studio_setup.png" alt="" />CMS Settings</a></span></span></p>
@@ -58,7 +58,7 @@
     <div id="content-nav">
         <div id="func-nav">
             <ul>
-                <li><a href="portal-manage.html" class="portal langkey">My Portal</a></li>
+                <li><a href="portal-manage.html" class="portal langkey">Main Channels</a></li>
                 <li><a href="store-promotion.html" class="store langkey">Program Store</a></li>
                 <li><a href="brand-setting.html" class="brand langkey">Brand Settings</a></li>
             </ul>
@@ -68,7 +68,7 @@
     <div id="portal-slider" class="slider-wrap"><div class="slider-vertical"></div></div>
     <div id="content-main">
         <div id="title-func" class="clearfix">
-            <h2><span class="langkey">My Portal</span> &gt; <span class="set_name"></span></h2>
+            <h2><span class="langkey">Main Channels</span> &gt; <span class="set_name"></span></h2>
             <ul>
                 <li class="hide"><p class="btns"><span><a href="javascript:void(0)" id="set-preview" target="_blank" class="langkey">Preview</a></span></p></li>
                 <li id="set-save" class="last"><p class="btns"><span><a href="javascript:void(0)" class="langkey">Save</a></span></p></li>
