--- a/portal-set.html
+++ b/portal-set.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="stylesheets/lightbox.css?v=1278" />
 <link rel="stylesheet" href="stylesheets/uniform.css?v=1278" />
 <link rel="stylesheet" href="stylesheets/portal.css?v=1278" />
-<title>9x9.tv - My Portal</title>
+<title>9x9.tv - Main Channels</title>
 </head>
 <body>
 <div id="fb-root"></div>
@@ -37,7 +37,7 @@
         <h3><a href="index.html"><span class="cms-icon">CMS</span><span class="sub-title">Content Management System</span></a></h3>
         <ul>
             <li><span><a href="index.html">My Channels</a></span></li>
-            <li class="on"><span><a href="portal-manage.html">My Portal</a></span></li>
+            <li class="on"><span><a href="portal-manage.html">My App</a></span></li>
         </ul>
         <div class="studio-setup">
             <p class="btn-left"><span class="btn-right"><span class="btn-middle"><a href="cms-settings.html"><img src="images/icon_studio_setup.png" alt="" />CMS Settings</a></span></span></p>
@@ -56,7 +56,7 @@
     <div id="content-nav">
         <div id="func-nav">
             <ul>
-                <li class="active"><a href="#" class="portal">My Portal</a></li>
+                <li class="active"><a href="#" class="portal">Main Channels</a></li>
                 <li><a href="store-promotion.html" class="store langkey">Program Store</a></li>
                 <li><a href="brand-setting.html" class="brand langkey">Brand Settings</a></li>
             </ul>
@@ -66,7 +66,7 @@
     <div id="main-wrap-slider" class="slider-wrap"><div class="slider-vertical"></div></div>
     <div id="content-main">
         <div id="title-func" class="clearfix portal-set">
-            <h2 class="langkey">My Portal</h2>
+            <h2 class="langkey">Main Channels</h2>
         </div>
         <div id="content-main-wrap">
             <div class="constrain">
