cancel promotion category limit (requirement from ivan)

--- a/store-promotion.html
+++ b/store-promotion.html
@@ -108,7 +108,7 @@
                     <span class="form-content langkey">Sorted by: Updated time</span>
                 </div>
             </div>
-            <h2 id="cntChannelEmpty" class="langkey hide">You can add 6 prmotion categories.</h2>
+            <h2 id="cntChannelEmpty" class="langkey hide"><!--You can add 6 prmotion categories.--></h2>
             <div id="store-constrain">
                 <div id="store-list">
                     <ul class="channel-list">
