--- a/channel-add.html
+++ b/channel-add.html
@@ -103,6 +103,37 @@
 </div>
 <!-- System Error Layer End -->
 
+<!-- YouTube sync Prompt Layer Begin -->
+<div id="ytsyncs-prompt" class="lightbox-content overlay-l" style="width:350px">
+    <div class="overlay-container">
+        <div class="overlay-wrap">
+            <a href="#" class="btn-close">Close</a>
+            <p class="content">Synchronizing. This may take a few minutes.</p>
+            <div class="overlay-btn">
+                <p class="btns btn-leave"><span><a >Yes</a></span></p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div id="ytsync-prompt" class="overlay-h172 youtube-synchronizing overlay-sys">
+    <div class="overlay-h172-left"></div>
+    <div class="overlay-h172-center">
+        <p class="btn-close"></p>
+        <img src="images/icon_load_l.gif" alt="">
+        <p class="content">Synchronizing. This may take a few minutes.</p>
+        <div class="overlay-button-holder">
+            <div class="btn-gray">
+                <p class="left"></p>
+                <p id="synchronizing-ok" class="center btn-leave">OK</p>
+                <p class="right"></p>
+            </div>
+        </div>
+    </div>
+    <div class="overlay-h172-right"></div>
+</div>
+<!-- YouTube sync Prompt Layer End -->
+
 <!-- Unsave Prompt Layer Begin -->
 <div id="unsave-prompt" class="lightbox-content overlay-l">
     <div class="overlay-container">
@@ -136,7 +167,13 @@
 <!-- content-main-tmpl Begin -->
 <script id="content-main-tmpl" type="text/x-jquery-tmpl">
 <div id="title-func" class="clearfix">
-    <h2>${nn._([cms.global.PAGE_ID, 'title-func', 'My Programs &gt; Create a new program'])}</h2>
+    <h2>${nn._([cms.global.PAGE_ID, 'title-func', 'My Programs'])} > 
+    {{if cms.global.vIsYoutubeSync === true}}
+        {{html nn._([cms.global.PAGE_ID, 'title-func', 'Create a new YouTube Sync Program'])}}
+    {{else}}
+        {{html nn._([cms.global.PAGE_ID, 'title-func', 'Create a new 9x9 program'])}}
+    {{/if}}
+    </h2>
     <p class="required"><acronym title="Required field" class="mark-required">*</acronym>${nn._([cms.global.PAGE_ID, 'title-func', 'Required field'])}</p>
 </div>
 <div id="content-main-wrap" class="footer-on">
@@ -150,7 +187,7 @@
         <div class="fmfield">
             <p class="text">
                 <span>
-                    <input type="text" name="sourceUrl" id="ytUrl" maxlength="100" value="" class="text" placeholder="請輸入 youtube 網址">
+                    <input type="text" name="sourceUrl" id="ytUrl" maxlength="100" value="" class="text" placeholder="https://www.youtube.com/user/ABC or http://www.youtube.com/playlist?list=ABC">
                 </span>
             </p>
             <!-- <span class="notice">
@@ -164,7 +201,8 @@
     <div class="fminput clearfix">
         <label for="name"><acronym title="Required field" class="mark-required">*</acronym>${nn._([cms.global.PAGE_ID, 'setting-form', 'Title'])}</label>
         <div class="fmfield">
-            <p class="text{{if cms.global.vIsYoutubeSync === true}} disabled{{/if}}"><span><input type="text" name="name" id="name" maxlength="100" value="" class="text" /></span></p>
+            <p class="text{{if cms.global.vIsYoutubeSync === true}} disabled{{/if}}"><span>
+            <input type="text" name="name" id="name" maxlength="100" value="" class="text" {{if cms.global.vIsYoutubeSync === true}}disabled="disabled"{{/if}} /></span></p>
             <span class="notice"><span id="name-charcounter">20</span>　${nn._([cms.global.PAGE_ID, 'setting-form', 'Best within 10 characters'])}</span>
         </div>
     </div>
@@ -189,7 +227,8 @@
     <div class="fminput clearfix">
         <label>${nn._([cms.global.PAGE_ID, 'setting-form', 'Description'])}</label>
         <div class="fmfield">
-            <p class="textarea{{if cms.global.vIsYoutubeSync === true}} disabled{{/if}}"><span><span><textarea name="intro" id="intro" cols="80" class="textarea"></textarea></span></span></p>
+            <p class="textarea{{if cms.global.vIsYoutubeSync === true}} disabled{{/if}}"><span><span>
+            <textarea name="intro" id="intro" cols="80" class="textarea" {{if cms.global.vIsYoutubeSync === true}}disabled="disabled"{{/if}}></textarea></span></span></p>
             <span class="notice"><span id="intro-charcounter">70</span>　${nn._([cms.global.PAGE_ID, 'setting-form', 'Best within 52 characters'])}</span>
         </div>
     </div>
